SUBDIRS = \
  filecopy

EXTRA_DIST = \
  stream.cpp \
  stream.h \
  stream_headmoduletask.cpp \
  stream_headmoduletask.h \
  stream_messageallocatorheap.cpp \
  stream_messageallocatorheap.h \
  stream_session_message.cpp \
  stream_session_message.h \
  stream_task.cpp \
  stream_task.h \
  stream_task.inl \
  stream_task_asynch.cpp \
  stream_task_asynch.h \
  stream_task_synch.cpp \
  stream_task_synch.h \
  test_u_common.h \
  test_u_common_modules.h \
  test_u_defines.h

