add_subdirectory (db)
add_subdirectory (dec)
add_subdirectory (dev)
add_subdirectory (doc)
add_subdirectory (file)
add_subdirectory (html)
add_subdirectory (lib)
add_subdirectory (misc)
# *IMPORTANT NOTE*: comment temporarily to disambiguate ACEStream <-> ACENetwork
#                   interdependencies
#add_subdirectory (net)
add_subdirectory (stat)
add_subdirectory (vis)
